--- a/localisation/english/00_RoN_technology_l_english.yml
+++ b/localisation/english/00_RoN_technology_l_english.yml
@@ -169,15 +169,15 @@ tank_support_eq_9:0 "Modern Improved Tank Equipment"
 NSB_early_tank_gun:0 "Early Tank Gun"
 NSB_early_tank_gun_desc:0 ""
 tank_gun_1:0 "Great War Tank Gun"
-tank_gun_1_desc:0 ""
+tank_gun_1_desc:0 "Great War Main Gun. Generally consisted of a Light Artillery piece repurposed for a Tank Chassis."
 tank_gun_2:0 "Interwar Tank Gun"
-tank_gun_2_desc:0 ""
+tank_gun_2_desc:0 "Tank Main Gun using ammunition designed specifically to counter other Tanks. Better at piercing armor."
 tank_gun_3:0 "Tank Gun"
-tank_gun_3_desc:0 ""
+tank_gun_3_desc:0 "More advanced Tank Gun with improved performance at greater distances, and versus heavier vehicles."
 tank_gun_4:0 "Improved Tank Gun"
-tank_gun_4_desc:0 ""
+tank_gun_4_desc:0 "Advanced ammunition types such as Shaped Charge (HEAT/HESC), and Sabot-encased Projectiles prove to be far superior when compared to previous types."
 tank_gun_5:0 "Railgun Cannon"
-tank_gun_5_desc:0 ""
+tank_gun_5_desc:0 "Experimental Cannon which uses electrically-charged magnets to drive a thin, highly magnetic projectile to extreme velocities. Better penetration, less hearing damage."
 
 heating_unit:0 "Early Heating Unit"
 heating_unit_desc:0 ""
