--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -2504,18 +2504,25 @@
  ROM_heavy_tank_equipment_2_short:0 "Iancu"
  ROM_heavy_tank_equipment_3:0 "Maresal"
  ROM_heavy_tank_equipment_3_short:0 "Maresal"
+ ROM_early_infantry_equipment_1890:0 "Lebel M1886/93"
+ ROM_early_infantry_equipment_1890_short:0 "Lebel M1886/93"
  ROM_infantry_equipment_0:1 "Mannlicher M1893"
  ROM_infantry_equipment_0_short:1 "Mannlicher M1893"
  ROM_infantry_equipment_1:0 "ZB vz.24"
  ROM_infantry_equipment_1_short:0 "ZB vz.24"
+ ROM_infantry_equipment_1_desc:0 "The vz.24 is a Czechoslovak Battle Rifle, based heavily on the Mauser bolt-action design, and exported to a few other Balkan Minors during the interwar period; including Romania.
  ROM_infantry_equipment_2:0 "Orita M1941"
  ROM_infantry_equipment_2_short:0 "Orita M1941"
+ ROM_infantry_equipment_2_desc:0 "A Submachine Gun designed by German engineer Heinrich Vollmer, as a developement of the MP-40, and produced domestically for the Romanian Army throughout WW2. The M1941 featured a Bergmann MP-28 lower, and an MP-40 receiver, according to Weapons Expert Ian McCollum.
  ROM_infantry_equipment_3:0 "Orita Carbine"
  ROM_infantry_equipment_3_short:0 "Orita Carbine"
+ ROM_infantry_equipment_3_desc:0 "A Carbine variant chambered for 9x23mm Steyr, instead of the 9x19mm round standard throughout the Axis Powers. Only one was built.
  ROM_light_tank_destroyer_equipment_1:0 "Vânătorul De Care R-35"
  ROM_light_tank_destroyer_equipment_1_short:0 "VDC R35"
+ ROM_light_tank_destroyer_equipment_1_desc:0 "Modified Renault H.35 Light Tank used by the Romanian Army. Saw limited use during WW2.
  ROM_light_tank_destroyer_equipment_2:0 "TACAM R-1"
  ROM_light_tank_destroyer_equipment_2_short:0 "TACAM R-1"
+ ROM_light_tank_destroyer_equipment_2_desc:0 "Romanian-Czech IFV (Infantry Fighting Vehicle) used extensively by the Romanian Army. The Machine Gun was swapped for a small Cannon.
  ROM_light_tank_destroyer_equipment_3:0 "TACAM T-38"
  ROM_light_tank_destroyer_equipment_3_short:0 "TACAM T-38"
  ROM_light_tank_equipment_1:1 "R-1"
@@ -2536,9 +2543,11 @@
  ROM_medium_tank_equipment_1_short:0 "T-39"
  ROM_medium_tank_equipment_2:0 "Skoda T-21 R-3"
  ROM_medium_tank_equipment_2_short:0 "R-3"
- ROM_medium_tank_equipment_3:0 "R-43"
- ROM_medium_tank_equipment_3_short:0 "R-43"
+ ROM_medium_tank_equipment_3:0 "Panzerkampfwagen IV"
+ ROM_medium_tank_equipment_3_short:0 "Pz. IV"
+ ROM_medium_tank_equipment_3_desc:0 "Panzer IVs captured by the Soviets during Operation Barbarossa. Some were given to Romania, who had recently overthrown the Iron Guard and switched sides. Armed heavily with a 75mm gun and a pair of 8mm co-axial MGs."
  ROM_motorized_equipment_1:0 "AFB 3-ton"
+ ROM_motorized_equipment_1_desc:0 "Trucks used for transporting supplies, or for be used in Army Divisions."
  ROM_super_heavy_tank_equipment_1:0 "Maresal Mare"
  ROM_super_heavy_tank_equipment_1_short:0 "Maresal Mare"
  RUE_early_infantry_equipment_0:0 "Model 1891/1910"
